13/security-context-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-1
spec:
  volumes:
  - name: sec-ctx-vol
    emptyDir: {}
  containers:
  - name: main
    image: busybox
    command: [ "sh", "-c", "sleep 1h" ]
    volumeMounts:
    - name: sec-vol
      mountPath: /data/demo
    securityContext:
      allowPrivilegeEscalation: false
