13/security-context-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-3
spec:
  containers:
  - name: sec-3
    image: smlinux/node-hello:1.0
