13/security-context-4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-4
spec:
  containers:
  - name: sec-4
    image: smlinux/node-hello:1.0
