13/web-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webtest
  labels:
    app: webtest
spec:
  containers:
  - name: main
    image: centos
    command: ["/bin/sleep", "999999"]
